<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group_0698.flightapp.ClientActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/client_title"
        android:id="@+id/client_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_info"
        android:id="@+id/view_info"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/client_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="viewInfo"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_booked"
        android:id="@+id/show_booked"
        android:layout_below="@+id/view_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showBooked"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_itineraries"
        android:id="@+id/search_itineraries"
        android:layout_below="@+id/show_booked"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="searchPage"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_flights"
        android:id="@+id/search_flights"
        android:layout_below="@+id/search_itineraries"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="searchFlight"/>
</RelativeLayout>
