<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group_0698.flightapp.AdminActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/admin_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/admin_title"
        android:textAlignment="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_clients"
        android:id="@+id/upload_clients"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/admin_title"
        android:layout_centerHorizontal="true"
        android:onClick="uploadClients"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_flights"
        android:id="@+id/button2"
        android:layout_below="@+id/upload_clients"
        android:layout_alignLeft="@+id/upload_clients"
        android:layout_alignStart="@+id/upload_clients"
        android:onClick="uploadFlights"/>
</RelativeLayout>
